  * collection/unpacked{,.desc}:
    + [RG] New scripts to replace the unpack level 2.

  * frontend/lintian:
    + [RG] Deprecate and replace unpack levels with the use of
      collection scripts.
    + [ADB] Remove an unused variable declaration.

  * lib/Spelling.pm:
    + [ADB] Add corrections for "nam" (name) and "nams" (names).
    + [RG] Add some more spelling errors.

  * man/lintian.1:
    + [RG] Document deprecation of unpack levels.
    + [ADB] Add the new "unpacked" collection script to the list of such
      scripts.
    + [ADB] Correct the documentation of --tags-from-file to indicate that
      the file contains tags to issue, not suppress.
  
  * reporting/templates/maintainer.tmpl:
    + [RA] Fix the logic to optionally display the archive area of
      additional package entries under the same source package.

  * unpack/unpack-{src,bin}pkg-l2:
    + [RG] Dropped in favour of collection/unpacked.

 -- Russ Allbery <rra@debian.org>  Sat, 26 Dec 2009 23:05:35 -0800

lintian (2.3.0) unstable; urgency=low

  The "welcome Raphael Geissert!" release.

  * Summary of tag changes:
    + Added:
      - capitalization-error-in-description
        (split from spelling-error-in-description)
      - debian-rules-automatically-updates-control
      - duplicate-in-relation-field (pedantic)
      - duplicated-compressed-file
      - init.d-script-missing-dependency-on-local_fs (experimental)
      - init.d-script-missing-dependency-on-remote_fs (experimental)
      - obsolete-relation-form-in-source
      - ocaml-dangling-cmi
      - ocaml-dangling-cmx
      - ocaml-dangling-cmxa
      - ocaml-dangling-cmxs
      - ocaml-dev-file-in-nondev-package (pedantic)
      - ocaml-dev-file-not-in-usr-lib-ocaml (pedantic)
      - ocaml-meta-without-suggesting-findlib (pedantic)
      - ocaml-stray-cmo
      - spelling-error-in-manpage
    + Removed:
      - build-depends-without-arch-dep

  * checks/*:
    + [RA] Use Lintian::Tags instead of Tags.